--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ wheels/
 *.egg
 MANIFEST
 
+# Experiments and generated data
+experiments/
+chain-data
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
