--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-mici>=0.1.8
-symnum>=0.1.1
-sympy>=1.4
-numpy>=1.17
-scipy>=1.1
-jax>=0.1.55
-jaxlib>=0.1.37
-matplotlib>=3.1
-jupyter>=1.0
-arviz>=0.5
-corner>=2.0
+mici==0.1.10
+symnum==0.1.2
+numpy==1.21
+sympy==1.8
+jax==0.2.21
+jaxlib==0.1.71
+matplotlib==3.4
+arviz==0.11.2
+corner==2.2
